--- a/pom.xml
+++ b/pom.xml
@@ -29,9 +29,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.microsoft.ews-java-api</groupId>
-    <artifactId>ews-java-api</artifactId>
+    <artifactId>smit-ews-java-api</artifactId>
     
-    <version>2.1-SNAPSHOT</version>
+    <version>2.1.0</version>
 
     <name>Exchange Web Services Java API</name>
     <description>Exchange Web Services (EWS) Java API</description>
@@ -291,6 +291,11 @@
             <scope>test</scope>
         </dependency>
 
+ 		<dependency>
+            <groupId>com.sun.xml.parsers</groupId>
+            <artifactId>jaxp-ri</artifactId>
+            <version>1.4.5</version>
+        </dependency>
     </dependencies>
 
     <build>
